src/mailer/snapshots/loco_rs__mailer__template__tests__can_render_template_with_inheritance.snap
---
source: src/mailer/template.rs
expression: template.render(&args)?
---
Content {
    subject: "Welcome Test User!\n",
    text: "Hello Test User!\n\nYour verification token is: ABC-123-XYZ\n\nThank you for using our service.\n",
    html: "<!DOCTYPE html>\n<html>\n<head><title>Welcome Email</title></head>\n<body>\n\n<h1>Hello Test User!</h1>\n<p>Your verification token is: <strong>ABC-123-XYZ</strong></p>\n\n</body>\n</html>\n",
}
